package switch2021.project.datamodel;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;
import switch2021.project.model.valueObject.TypologyID;

import javax.persistence.EmbeddedId;
import javax.persistence.Entity;
import javax.persistence.Table;

@Entity
@NoArgsConstructor
@AllArgsConstructor
@Table(name = "typologies")
@Getter
@Setter
public class TypologyJpa {

    @EmbeddedId
    private TypologyID id;

}
